--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "body-parser": "^2.2.0",
+    "dotenv": "^17.2.3",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "react": "^19.1.1",
