--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^17.2.3",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
